add gif to README

--- a/README.org
+++ b/README.org
@@ -3,6 +3,8 @@
 
 * Fun with Asterius
   The Elm Architecture is a wonderful means for creating web apps without worrying about runtime errors, Hastea is a TEA-inspered web framework using those principles ontop of Haskell compilation through Asterius
+  [[file:https://i.imgur.com/6uEn5Wt.gif]]
+  
 * Building
 ** Using Docker
    You can find an asterius docker image on [[https://hub.docker.com/r/terrorjack/asterius][docker hub]]
