--- a/README.org
+++ b/README.org
@@ -12,11 +12,13 @@
    #+BEGIN_SRC bash
    ahc-link --input-hs Main.hs --bundle --browser --output-dir=$(DIST_DIR)
    #+END_SRC
+  Alternatively you can also try `make docker`
 
   No other methods have been tried, unfortunately
 * TODOs
 ** Development
-  - Add `Cmd`
-  - Add diffing on Virtual DOM
   - Test out different input methods
   - Benchmark
+  - Figure out build system
+    - Create library instead of executable
+    - Import library into a Main.hs, rather than just inline
