--- a/README.org
+++ b/README.org
@@ -4,7 +4,7 @@
 * Fun with Asterius
   The Elm Architecture is a wonderful means for creating web apps without worrying about runtime errors, Hastea is a TEA-inspered web framework using those principles ontop of Haskell compilation through Asterius
   [[file:https://i.imgur.com/6uEn5Wt.gif]]
-  [[file:https://i.imgur.com/RcWUOJX.gif]]
+  [[file:https://i.imgur.com/EygKvbo.gif]]
   
 * Building
 ** Using Docker
