--- a/README.org
+++ b/README.org
@@ -3,8 +3,9 @@
 
 * Fun with Asterius
   The Elm Architecture is a wonderful means for creating web apps without worrying about runtime errors, Hastea is a TEA-inspered web framework using those principles ontop of Haskell compilation through Asterius
-  TodoMVC example (under `src/TodoMVC`):
-  [[file:https://i.imgur.com/EygKvbo.gif]]
+  
+**** TodoMVC example (under `src/TodoMVC`):
+     [[file:https://i.imgur.com/EygKvbo.gif]]
   
 * Building
 ** Using Docker
